--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Sportfinder</title>
 </head>
 <body >
+    <!-- Header & Nav Open -->
     <Header>
         <nav class="headcontiner">
             <div class="headLogo">
@@ -15,9 +16,9 @@
             </div>
             <div class="headlink">
                 <a class="hlink" href="#">Home</a>             
-                <a class="hlink" href="#">Features</a>             
-                <a class="hlink" href="#">Blog</a>             
-                <a class="hlink" href="#">Become a Partner</a>             
+                <a class="hlink" href="#Features">Features</a>             
+                <a class="hlink" href="#Blogs">Blog</a>             
+                <a class="hlink" href="#partner-with-spotfinder">Become a Partner</a>             
             </div>
             <div class="headbtn">
                 <a class="btnlink log" href="#">Login</a>
@@ -25,10 +26,15 @@
             </div>
         </nav>
     </Header>
+    <!-- Header & Nav Close -->
+
+    <!-- continer Open -->
     <div class="continer">
+        <!-- con-Form Open -->
         <div class="con-Form">
             <h1 class="conheading">Parking <span class="sec-color">Simplified</span></h1>
             <p class="conpara">Easily Find a Parking Space now!</p>
+            <!-- subcontiner Open -->
             <div class="subcontiner">
                 <form action="">
                            <div class="form">
@@ -63,41 +69,143 @@
                             </div>
                         </div>
                     </div>
-                        <!-- <div class="Fbtn"> -->
                             <input type="button" value="Select Parking Space">
-                        <!-- </div> -->
                     </div>
                 </form>
             </div>
+            <!-- Subcontiner Close -->
             <div class="con-img">
                 <img class="Cimg" src="img/cargirl.png" alt="">
               </div>
         </div> 
+     <!-- con-Form Close -->
     </div>
-    <div class="Card">
+    <!-- continer Close -->
+
+    <!-- Card one Open -->
+    <div id="Features" class="Card">
         <h1 class="Cardhead">We are everywhere!</h1>
         <p class="Cardpara">Find a new home for your car.</p>
         <div class="box">
             <img class="img1" src="img/car.jpg" alt="">
             <div class="box1">
                 <h1 class="Chead">City Parking</h1>
-            <button class="btn1">Find a Parkin</button>
+            <button class="btn1">Find a Parking</button>
         </div>
         </div>
         <div class="box">
             <img class="img1" src="img/sami.jpg" alt="">
             <div class="box1">
                 <h1 class="Chead">Sami Truck Parking</h1>
-            <button class="btn1">Find a Parkin</button> 
+            <button class="btn1">Find a Parking</button> 
         </div>
         </div>
         <div class="box">
             <img class="img1" src="img/airplan.jpg" alt="">
             <div class="box1">
                 <h1 class="Chead">Airport Parking</h1>
-            <button class="btn1">Find a Parkin</button>      
+            <button class="btn1">Find a Parking</button>      
         </div>
         </div>
     </div>
+    <!-- Card one Close -->
+
+    <!-- SpotCard two Open -->
+    <div class="spotCard">
+        <h1 class="spotCardhead">Why Spot Finder?</h1>
+        <p class="spotCardpara">We understand the pain for finding the right spot where your car feels home. Handicap friendly spots, diligent customer support, we aim to comfort you with nearest parking spot!</p>
+        <div class="spotbox">
+            <img class="spotimg1 fastimg" src="img/Fast.jpg" alt="">
+            <div class="box1">
+                <h1 class="spothead">it's fast</h1>
+                <p class="spotpara">Our new app makes finding spots in not more than 3 steps. We're building the largest network of parking spots!</p>
+        </div>
+        </div>
+        <div class="spotbox">
+            <img class="spotimg1" src="img/Eassy.jpg" alt="">
+            <div class="box1">
+                <h1 class="spothead">It's easy</h1>
+                <p class="spotpara">We aim to keep you hooked to our services with an experience excellence team!</p>
+        </div>
+        </div>
+        <div class="spotbox">
+            <img class="spotimg1" src="img/afford.jpg" alt="">
+            <div class="box1">
+                <h1 class="spothead">It's affordable</h1>
+                <p class="spotpara">Find affordable spots and spend your days stress-free while your car is parked with us.</p>
+        </div>
+        </div>
+    </div>
+    <!-- SpotCard two Close -->
+
+    <!-- AirCard  Open -->
+    <div class="AirCard">
+        <h1 class="Airhead">Airport Parking</h1>
+        <!-- <p class="Cardpara">Find a new home for your car.</p> -->
+        <div class="Airbox">
+            <img class="Airimg1" src="img/Air1.jpg" alt="">
+            <div class="Airbox1">
+                <h1 class="CAirhead">Day Inn by Wynd...</h1>
+            <button class="Airbtn1">Book Now</button>
+        </div>
+        </div>
+        <div class="Airbox">
+            <img class="Airimg1" src="img/Air2.jpg" alt="">
+            <div class="Airbox1">
+                <h1 class="CAirhead">Day Inn by Wynd...</h1>
+            <button class="Airbtn1">Book Now</button> 
+        </div>
+        </div>
+        <div class="Airbox">
+            <img class="Airimg1 img2" src="img/Air3.png" alt="">
+            <div class="box1">
+                <h1 class="CAirhead">Home two Suites by H..</h1>
+            <button class="Airbtn1">Book Now</button>      
+        </div>
+        </div>
+        <div class="Airbox">
+            <img class="Airimg1" src="img/Air4.jpg" alt="">
+            <div class="Airbox1">
+                <h1 class="CAirhead">Holiday Inn Expres...</h1>
+            <button class="Airbtn1">Book Now</button>      
+        </div>
+        </div>
+    </div>
+    <!-- AirCard Close -->
+
+    <!-- InterestingCard  Open -->
+    <div id="Blogs" class="InterCard">
+        <h1 class="InterCardhead">Interesting Reads!</h1>
+        <p class="InterCardpara">New articles</p>
+        <div class="Interbox">
+            <img class="Interimg1" src="img/Park App.jpg" alt="">
+            <div class="Interbox1">
+                <h1 class="CInterhead">City Parking</h1>
+            <button class="Interbtn1">Read More >>></button>
+        </div>
+        </div>
+        <div class="Interbox">
+            <img class="Interimg1" src="img/partner.png" alt="">
+            <div class="Interbox1">
+                <h1 class="CInterhead">Sami Truck Parking</h1>
+            <button class="Interbtn1">Read More >>></button> 
+        </div>
+        </div>
+        <div class="Interbox">
+            <img class="Interimg1" src="img/your Beach.png" alt="">
+            <div class="Interbox1">
+                <h1 class="CInterhead">Airport Parking</h1>
+            <button class="Interbtn1">Read More >>></button>      
+        </div>
+        </div>
+    </div>
+    <!-- InterestingCard Close -->
+    <!-- InterestingCard Close -->
+    <div id="partner-with-spotfinder" class="PartnerCard">
+        <h1 class="Partnerhead">Partner With Spot Finder</h1>
+        <h3 class="Partnerhead1">Grow your business by listing your service with us.</h3>
+        <button class="Partnerbtn1">Become a Partner</button>      
+    </div>
+
 </body>
 </html>
