--- a/index.html
+++ b/index.html
@@ -206,6 +206,26 @@
         <h3 class="Partnerhead1">Grow your business by listing your service with us.</h3>
         <button class="Partnerbtn1">Become a Partner</button>      
     </div>
-
+    <footer class="footer">
+        <div class="footer_div">
+            <h3 class="footer_div_heading">About Us</h3>
+            <p class="footer_div_para">As Travelers and preplanners on a trip,
+                we hate not being able to find parking on
+                a reliable site. We decided to solve this by starting in house!</p>
+        </div>
+        <div class="footer_div">
+            <h3 class="footer_div_heading">Company</h3>
+            <p class="footer_div_para">privacy Policy
+                cancellation policy
+                Terms and Conditions</p>
+        </div>
+        <div class="footer_div">
+            <h3 class="footer_div_heading">Contact Info</h3>
+            <p class="footer_div_para">contact@spotfinder.app
+                833-799-7770
+                Fort Lauderdale, Florida
+                Contact Support</p>
+        </div>
+    </footer>
 </body>
 </html>
